typo, layout, final version of text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,36 @@
-body {
-  padding-top: 50px;
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(https://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
-h1 {
-	margin-bottom: 48px;
+@font-face {
+  font-family: 'Quattrocento';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Quattrocento'), url(https://themes.googleusercontent.com/static/fonts/quattrocento/v4/WZDISdyil4HsmirlOdBRFHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+body {
+	padding-top: 50px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .obligatory {
 	color: red
 }
 
+#text h1 { 
+	font-family: 'Quattrocento', serif;
+	font-size: 48px;
+	margin-bottom: 48px;
+}
+
+#text p  { 
+	font-size: 21px;
+}
+
+h3 {
+	margin-bottom: 24px;
+}
