added banners and pdf

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body {
 	margin-bottom: 48px;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
 	font-family: 'Quattrocento', serif;
 }
 
@@ -36,4 +36,8 @@ h1, h2, h3 {
 
 h3 {
 	margin-bottom: 24px;
+}
+
+h4 {
+	margin-top: 24px;
 }
